# procon2014_ut

./: AUTHORS.md  LICENSE  LICENSE.md  README.md
resources/answer/imData/: 14-10.txt  14-11.txt  14-13.txt  14-14.txt  14-15.txt  14-18.txt  14-19.txt  14-2.txt  14-3.txt  14-4.txt  14-7.txt  14-8.txt  14-9.txt  28-10.txt  28-11.txt  28-12.txt  28-13.txt  28-16.txt  28-17.txt  28-18.txt  28-19.txt  28-2.txt  28-3.txt  28-4.txt  28-5.txt  28-6.txt  28-7.txt  28-8.txt  28-9.txt  48x36-10.txt  48x36-11.txt  48x36-12.txt  48x36-14.txt  48x36-15.txt  48x36-16.txt  48x36-17.txt  48x36-19.txt  48x36-2.txt  48x36-20.txt  48x36-3.txt  (+3 more)
resources/answer/practice/: 02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  12.txt  13.txt  14.txt  17.txt
solver/: CMakeLists.txt
solver/exe/: CMakeLists.txt  hello.cpp  iterate_slide.cpp  kurage_chuning.cpp  post_client.cpp  post_server.cpp  problem_client.cpp  problem_server.cpp  run_slide.cpp  test_matrix.cpp  test_optimize.cpp  test_slide.cpp
solver/modules/: CMakeLists.txt
solver/modules/network/: CMakeLists.txt
solver/modules/network/include/network/: Message.hpp  PostClient.hpp  PostServer.hpp  PostSession.hpp  ProblemClient.hpp  ProblemServer.hpp  ProblemSession.hpp  Session.hpp  SessionManager.hpp
solver/modules/network/src/: PostClient.cpp  PostServer.cpp  PostSession.cpp  ProblemClient.cpp  ProblemServer.cpp  ProblemSession.cpp  SessionManager.cpp
solver/modules/slide/: CMakeLists.txt
solver/modules/slide/include/slide/: AdmissibleBoard.hpp  AlignBoard.hpp  Answer.hpp  AnswerBoard.hpp  AnswerFeature.hpp  AnswerLinearTree.hpp  AnswerSharedTree.hpp  AnswerTreeBoard.hpp  AnswerTreeFeature.hpp  BitBoard.hpp  Board.hpp  CostFeature.hpp  Direction.hpp  DolphinBoard.hpp  DolphinSolver.hpp  DragonSolver.hpp  ExactSolver.hpp  FixBoard.hpp  HashFeature.hpp  HitodeBoard.hpp  HitodeSolver.hpp  KurageBoard.hpp  KurageHashFeature.hpp  KurageSolver.hpp  L2Solver.hpp  LinearConflictFeature.hpp  LizardSolver.hpp  ManhattanFeature.hpp  OctopusBoard.hpp  ParityFeature.hpp  PlayBoard.hpp  PlayBoardUtility.hpp  Point.hpp  Problem.hpp  SharkBoard.hpp  SharkSolver.hpp  Solver.hpp  SquaredManhattanFeature.hpp  StraightSolver.hpp  UrchinBoard.hpp  (+7 more)
solver/modules/slide/include/slide/details/: AlignBoard.hpp  Board.hpp  DolphinSolver.hpp  FixBoard.hpp  KurageSolver.hpp  OctopusBoard.hpp  PlayBoard.hpp  UrchinBoard.hpp  WhaleSolver.hpp
solver/modules/slide/src/: Answer.cpp  AnswerLinearTree.cpp  CostFeature.cpp  Direction.cpp  DolphinSolver.cpp  DragonSolver.cpp  ExactSolver.cpp  HitodeSolver.cpp  KurageSolver.cpp  L2Solver.cpp  LizardSolver.cpp  Problem.cpp  SharkSolver.cpp  Solver.cpp  StraightSolver.cpp  WhaleSolver.cpp
solver/modules/ui/: CMakeLists.txt
solver/modules/ui/slide/: CMakeLists.txt
solver/modules/ui/slide/include/: getproblemworker.hpp  graphicsitemslideblock.hpp  graphicsitemslideboard.hpp  mainslidewindow.hpp  postproblemworker.hpp
solver/modules/ui/slide/src/: getproblemworker.cpp  graphicsitemslideblock.cpp  graphicsitemslideboard.cpp  mainslidewindow.cpp  mainslidewindow.ui  postproblemworker.cpp  slidemain.cpp
solver/modules/util/: CMakeLists.txt
solver/modules/util/include/util/: Random.hpp  SpinMutex.hpp  StopWatch.hpp  ThreadIndexManager.hpp  abs.hpp  color.hpp  define.hpp  dense_hash_map.hpp  dense_hash_set.hpp  hash.hpp  matrix.hpp  sqrt_approx.hpp  string.hpp
solver/modules/util/src/: Random.cpp  StopWatch.cpp  ThreadIndexManager.cpp  matrix.cpp
solver/resources/answer/imData/: 14-1.txt  14-12.txt  14-16.txt  14-17.txt  14-20.txt  14-5.txt  14-6.txt  28-1.txt  28-14.txt  28-15.txt  28-20.txt  48x36-1.txt  48x36-13.txt  48x36-18.txt  48x36-4.txt  48x36-5.txt  48x36-6.txt
solver/resources/answer/practice/: 01.txt  11.txt  15.txt  16.txt
